# Nerp-Essentials

./: .gitignore  CMakeLists.txt
source/data/: IterVersion.cpp  IterVersion.h  Version.cpp  Version.h
source/interface/: ILinkedObserver.cpp  ILinkedObserver.h  IObservable.cpp  IObservable.h
source/ness/data/: IterVersion.cpp  IterVersion.h  Property.h  Version.cpp  Version.h
source/ness/defines/: IHasMember_Def.h
source/ness/interface/: IHasMember.h  ILinkedObserver.cpp  ILinkedObserver.h  IObservable.cpp  IObservable.h
